k8s/services/emails/emails-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emails
  labels:
    app: emails
spec:
  replicas: ${EMAILS_REPLICAS}
  selector:
    matchLabels:
      app: emails
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: emails
    spec:
      imagePullSecrets:
        - name: docker-creds
      containers:
        - name: emails
          imagePullPolicy: IfNotPresent
          image: ${IMAGE}
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "2000m"
              memory: "2048Mi"
          readinessProbe:
            httpGet:
              path: /utils/health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /utils/health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 3
      restartPolicy: Always
