k8s/services/emails/emails-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emails-worker
  labels:
    app: emails-worker
spec:
  replicas: ${EMAILS_WORKER_REPLICAS}
  selector:
    matchLabels:
      app: emails-worker
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: emails-worker
    spec:
      imagePullSecrets:
        - name: docker-creds
      containers:
        - name: emails-worker
          imagePullPolicy: IfNotPresent
          image: ${IMAGE}
          command:
            ["taskiq", "worker", "src.tasks:broker", "--log-level", "INFO"]
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
      restartPolicy: Always
