k8s/services/emails/emails-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emails
spec:
  selector:
    app: emails
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
